# clawbets

./: .gitignore  AUDIT.md  Anchor.toml  README.md  agent2-keypair.json  my-keypair.json  package-lock.json  package.json  place-bet.ts  tsconfig.json
agents/: agent-0.json  agent-1.json  agent-2.json  agent-3.json  agent-4.json  agent-5.json  agent-6.json  agent-7.json  agent-8.json  agent-9.json
api/: .env.example  package-lock.json  package.json  tsconfig.json
api/src/: index.ts
api/src/routes/: bets.ts  markets.ts  protocol.ts  reputation.ts
api/src/services/: solana.ts
app/: package-lock.json  package.json
app/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
app/src/components/: ActivityFeed.tsx  ActivityProvider.tsx  HomeContent.tsx  LeaderboardContent.tsx  Logo.tsx  MarketCard.tsx  MarketDetail.tsx  PlaceBet.tsx  StatsCard.tsx  ToastNotifications.tsx  WalletButton.tsx  WalletProvider.tsx  icons.tsx
app/src/hooks/: useActivityFeed.ts  usePolling.ts
app/src/lib/: api.ts  (+6 more)
programs/clawbets/: Cargo.toml
programs/clawbets/src/: errors.rs  lib.rs  state.rs
programs/clawbets/src/instructions/: cancel_market.rs  claim_winnings.rs  close_betting.rs  create_market.rs  expire_market.rs  initialize.rs  mod.rs  place_bet.rs  reclaim_bet.rs  resolve_market.rs
scripts/: agent2-bet.ts  create-demo-market.ts  init-devnet.ts  seed-markets.ts  swarm-go.js  swarm-setup.js  swarm-v2.js  swarm.js  swarm.ts  test-resolve.js
tests/: clawbets.ts
video-assets/: GEMINI-PROMPT.md  KLING-PROMPTS.md  LUMA-PROMPTS.md  MARKETING-VIDEO-SCRIPT.md
(+16 files in other folders)
