[package]
name = "clawbets"
version = "0.1.0"
description = "Prediction Market Protocol for AI Agents on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clawbets"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
pyth-solana-receiver-sdk = "1.1.0"
base64ct = ">=1.0.0, <1.8.0"
